# p5xsummons

./: .gitignore  Cargo.toml  README.md
.github/: FUNDING.yml
src/: main.rs
src/controllers/: get_data.rs  manage_auth_key.rs  mod.rs  read_write.rs
src/models/: mod.rs  named.rs  original.rs
src/views/: mod.rs  p5xui.rs
