[package]
name = "p5xsummons"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = {version="1.0", features=["derive"]}
serde_derive = "1.0.203"
serde_json = "1.0.117"
json = "0.12.4"
reqwest = {version = "0.12.4", features = ["json"]}
tokio = {"version"= "1", features=["full"]}
egui = "0.32.0"
eframe = "0.32.0"
